--- a/hitlist/lord_miles.html
+++ b/hitlist/lord_miles.html
@@ -149,8 +149,8 @@
                                 <td>Miles Routledge</td>
                             </tr>
                             <tr>
-                                <th>Date of Birth</th>
-                                <td>N/A</td>
+                                <th>Image</th>
+                                <td><a href="https://pbs.twimg.com/profile_images/1861543447343095808/gjXejybw_400x400.jpg"><strong><b>Click Here</b></strong></a></td>
                             </tr>
                             <tr>
                                 <th>Address</th>
