--- a/index.html
+++ b/index.html
@@ -96,40 +96,51 @@
           --ring: 240 4.9% 83.9%;
         }
       }
-
-      /* Increased opacity for heading and card headers */
-      h1 {
-    color: black;
-    font-size: 24px;
-    font-weight: bold;
-      }
-
-      .profile-item h2 {
-        color: black;
-        font-size: 18px;
-        font-weight: bold;
-      }
     </style>
   </head>
   <body class="transition-colors duration-300">
-    <header class="bg-primary py-4 px-6 flex justify-between items-center">
+    <header class="bg-primary py-4 px-6 flex flex-wrap items-center justify-between">
       <div class="text-primary-foreground text-2xl font-bold">Islamist Watch</div>
-      <nav>
-        <ul class="flex space-x-4">
-          <li><a href="#" class="text-primary-foreground hover:text-primary-foreground/80">Home</a></li>
-          <li><a href="./menu/about.html" class="text-primary-foreground hover:text-primary-foreground/80">About</a></li>
-          <li><a href="./menu/contactus.html" class="text-primary-foreground hover:text-primary-foreground/80">Contact</a></li>
+      <button
+        class="block md:hidden text-primary-foreground text-2xl"
+        id="menu-toggle"
+      >
+        ☰
+      </button>
+      <nav
+        class="hidden md:flex w-full md:w-auto flex-col md:flex-row space-y-2 md:space-y-0 md:space-x-4 mt-4 md:mt-0"
+        id="mobile-menu"
+      >
+        <ul class="flex flex-col md:flex-row md:space-x-4">
+          <li>
+            <a href="#" class="text-primary-foreground hover:text-primary-foreground/80">Home</a>
+          </li>
+          <li>
+            <a href="./menu/about.html" class="text-primary-foreground hover:text-primary-foreground/80">About</a>
+          </li>
+          <li>
+            <a href="./menu/contactus.html" class="text-primary-foreground hover:text-primary-foreground/80">Contact</a>
+          </li>
         </ul>
       </nav>
-      <div class="relative">
-        <input type="text" id="search" placeholder="Search..." class="bg-primary-foreground text-primary-foreground px-4 py-2 rounded-lg shadow-md w-48 focus:outline-none focus:ring-2 focus:ring-accent">
-        <img src="https://img.icons8.com/?size=100&id=44045&format=png&color=000000" alt="Search Icon" class="absolute right-2 top-2 w-6 h-6">
+      <div class="relative mt-4 md:mt-0">
+        <input
+          type="text"
+          id="search"
+          placeholder="Search..."
+          class="bg-primary-foreground text-primary px-4 py-2 rounded-lg shadow-md w-full md:w-48 focus:outline-none focus:ring-2 focus:ring-accent"
+        />
+        <img
+          src="https://img.icons8.com/?size=100&id=44045&format=png&color=000000"
+          alt="Search Icon"
+          class="absolute right-2 top-2 w-6 h-6"
+        />
       </div>
     </header>
     <main class="bg-background min-h-screen p-6">
       <div class="max-w-4xl mx-auto">
         <h1 class="text-3xl font-bold mb-4">People with Radical Ideology</h1>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="profileGrid">
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6" id="profileGrid">
           <div class="bg-card p-4 rounded-lg shadow-md profile-item">
             <img
               src="https://pbs.twimg.com/profile_images/1861543447343095808/gjXejybw_400x400.jpg"
@@ -139,26 +150,6 @@
             <h2 class="text-lg font-bold mb-2">Lord Miles</h2>
             <p class="text-sm text-muted-foreground">Lord Miles is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
             <a href="./hitlist/lord_miles.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
-          </div>
-          <div class="bg-card p-4 rounded-lg shadow-md profile-item">
-            <img
-              src=""
-              alt="Person 2"
-              class="w-full h-40 object-cover rounded-lg mb-4"
-            />
-            <h2 class="text-lg font-bold mb-2">Person 2</h2>
-            <p class="text-sm text-muted-foreground">Description of Person 2</p>
-            <a href="#" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
-          </div>
-          <div class="bg-card p-4 rounded-lg shadow-md profile-item">
-            <img
-              src=""
-              alt="Person 3"
-              class="w-full h-40 object-cover rounded-lg mb-4"
-            />
-            <h2 class="text-lg font-bold mb-2">Person 3</h2>
-            <p class="text-sm text-muted-foreground">Description of Person 3</p>
-            <a href="#" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
           </div>
         </div>
       </div>
@@ -174,18 +165,20 @@
       </div>
     </footer>
     <script>
-      // Basic search functionality (can be extended)
-      document.getElementById('search').addEventListener('input', function(event) {
+      const toggleButton = document.getElementById('menu-toggle');
+      const mobileMenu = document.getElementById('mobile-menu');
+
+      toggleButton.addEventListener('click', () => {
+        mobileMenu.classList.toggle('hidden');
+      });
+
+      document.getElementById('search').addEventListener('input', function (event) {
         const query = event.target.value.toLowerCase();
         const profiles = document.querySelectorAll('.profile-item');
-        
-        profiles.forEach(profile => {
+
+        profiles.forEach((profile) => {
           const name = profile.querySelector('h2').textContent.toLowerCase();
-          if (name.includes(query)) {
-            profile.style.display = 'block';
-          } else {
-            profile.style.display = 'none';
-          }
+          profile.style.display = name.includes(query) ? 'block' : 'none';
         });
       });
     </script>
