--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Islamist Watch</title>
+    <link rel="icon" href="./img/islamist watch logo.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
@@ -113,13 +114,16 @@
       >
         <ul class="flex flex-col md:flex-row md:space-x-4">
           <li>
-            <a href="#" class="text-primary-foreground hover:text-primary-foreground/80">Home</a>
+            <a href="./index.html" class="text-primary-foreground hover:text-primary-foreground/80">Home</a>
           </li>
           <li>
             <a href="./menu/about.html" class="text-primary-foreground hover:text-primary-foreground/80">About</a>
           </li>
           <li>
             <a href="./menu/contactus.html" class="text-primary-foreground hover:text-primary-foreground/80">Contact</a>
+          </li>
+          <li>
+            <a href="./current-events/arrest-campaign.html" class="text-primary-foreground hover:text-primary-foreground/80">Arrest Campaigns</a>
           </li>
         </ul>
       </nav>
