--- a/index.html
+++ b/index.html
@@ -114,16 +114,16 @@
       >
         <ul class="flex flex-col md:flex-row md:space-x-4">
           <li>
-            <a href="./index.html" class="text-primary-foreground hover:text-primary-foreground/80">Home</a>
+            <a href="./index " class="text-primary-foreground hover:text-primary-foreground/80">Home</a>
           </li>
           <li>
-            <a href="./menu/about.html" class="text-primary-foreground hover:text-primary-foreground/80">About</a>
+            <a href="./menu/about " class="text-primary-foreground hover:text-primary-foreground/80">About</a>
           </li>
           <li>
-            <a href="./menu/contactus.html" class="text-primary-foreground hover:text-primary-foreground/80">Contact</a>
+            <a href="./menu/contactus " class="text-primary-foreground hover:text-primary-foreground/80">Contact</a>
           </li>
           <li>
-            <a href="./current-events/arrest-campaign.html" class="text-primary-foreground hover:text-primary-foreground/80">Arrest Campaigns</a>
+            <a href="./current-events/arrest-campaign " class="text-primary-foreground hover:text-primary-foreground/80">Arrest Campaigns</a>
           </li>
         </ul>
       </nav>
@@ -153,7 +153,7 @@
             />
             <h2 class="text-lg font-bold mb-2">Lord Miles</h2>
             <p class="text-sm text-muted-foreground">Lord Miles is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
-            <a href="./hitlist/lord_miles.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+            <a href="./hitlist/lord_miles " class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
           </div>
         </div>
       </div>
@@ -161,10 +161,10 @@
     <footer class="bg-primary py-4 px-6 mt-8">
       <div class="text-primary-foreground text-sm text-center">
         <ul class="flex justify-center space-x-4">
-          <li><a href="./menu/about.html" class="hover:text-primary-foreground/80">About Us</a></li>
+          <li><a href="./menu/about " class="hover:text-primary-foreground/80">About Us</a></li>
           <li><a href="mailto:gbhremilio@proton.me" class="hover:text-primary-foreground/80">Email</a></li>
-          <li><a href="./menu/contactus.html" class="hover:text-primary-foreground/80">Contact Us</a></li>
-          <li><a href="./menu/faq.html" class="hover:text-primary-foreground/80">FAQs</a></li>
+          <li><a href="./menu/contactus " class="hover:text-primary-foreground/80">Contact Us</a></li>
+          <li><a href="./menu/faq " class="hover:text-primary-foreground/80">FAQs</a></li>
         </ul>
       </div>
     </footer>
