--- a/current-events/arrest-campaign.html
+++ b/current-events/arrest-campaign.html
@@ -158,11 +158,10 @@
                 Islamist Watch
             </h1>
             <nav>
-                <button>Home</button>
-                <button>Wanted List</button>
-                <button>Report Crime</button>
-                <button>About Us</button>
-            </nav>
+              <button onclick="location.href='../menu/about'">About Us</button>
+              <button onclick="location.href='../index'">Wanted List</button>
+              <button onclick="location.href='#'">Report Crime</button>
+          </nav>
         </div>
     </header>
 
