--- a/index.html
+++ b/index.html
@@ -156,6 +156,16 @@
             <p class="text-sm text-muted-foreground">Lord Miles is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
             <a href="./hitlist/lord_miles " class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
           </div>
+          <div class="bg-card p-4 rounded-lg shadow-md profile-item">
+            <img
+              src="https://pbs.twimg.com/profile_images/1326235726112034817/UD48Efoo_400x400.jpg"
+              alt="Daniel Haqiqatjou"
+              class="w-full h-40 object-cover rounded-lg mb-4"
+            />
+            <h2 class="text-lg font-bold mb-2">Daniel Haqiqatjou</h2>
+            <p class="text-sm text-muted-foreground">Daniel Haqiqatjou is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
+            <a href="./hitlist/daniel.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+          </div>
         </div>
       </div>
     </main>
