--- a/index.html
+++ b/index.html
@@ -166,6 +166,26 @@
             <p class="text-sm text-muted-foreground">Daniel Haqiqatjou is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
             <a href="./hitlist/daniel.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
           </div>
+          <div class="bg-card p-4 rounded-lg shadow-md profile-item">
+            <img
+              src="https://pbs.twimg.com/profile_images/1860541934256762880/pnveIBue_400x400.jpg"
+              alt="Waqar H Bhatti"
+              class="w-full h-40 object-cover rounded-lg mb-4"
+            />
+            <h2 class="text-lg font-bold mb-2">Waqar H Bhatti</h2>
+            <p class="text-sm text-muted-foreground">Waqar H Bhatti is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
+            <a href="./hitlist/waqarhbhatti.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+          </div>
+          <div class="bg-card p-4 rounded-lg shadow-md profile-item">
+            <img 
+              src="https://pbs.twimg.com/profile_images/1594377259909087238/3t-Qr96R_400x400.jpg"
+              alt="Mohammed Hijab"
+              class="w-full h-40 object-cover rounded-lg mb-4"
+              />
+            <h2 class="text-lg font-bold mb-2">Mohammed Hijab</h2>
+            <p class="text-sm text-muted-foreground">Waqar H Bhatti is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
+            <a href="./hitlist/mohammedhijab.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+          </div>
         </div>
       </div>
     </main>
