--- a/index.html
+++ b/index.html
@@ -186,6 +186,26 @@
             <p class="text-sm text-muted-foreground">Waqar H Bhatti is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
             <a href="./hitlist/mohammedhijab.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
           </div>
+          <div class="bg-card p-4 rounded-lg shadow-md profile-item">
+            <img 
+              src="https://pbs.twimg.com/profile_images/1815185014822170624/a0K3eKx__400x400.jpg"
+              alt="Bushra Shaikh"
+              class="w-full h-40 object-cover rounded-lg mb-4"
+            />
+            <h2 class="text-lg font-bold mb-2">Bushra Shaikh</h2>
+            <p class="text-sm text-muted-foreground">Budhra Shaikh is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
+            <a href="./hitlist/bushra.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+          </div>
+          <div class="bg-card p-4 rounded-lg shadow-md profile-item">
+            <img 
+              src="https://pbs.twimg.com/profile_images/1700278076557385728/oU_L6-Vs_400x400.jpg"
+              alt="Shaykh Sulaiman"
+              class="w-full h-40 object-cover rounded-lg mb-4"
+            />
+            <h2 class="text-lg font-bold mb-2">Shaykh Sulaiman</h2>
+            <p class="text-sm text-muted-foreground">Shaykh Sulaiman is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
+            <a href="./hitlist/sulaiman.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+          </div>          
         </div>
       </div>
     </main>
