Added more retards

--- a/index.html
+++ b/index.html
@@ -205,7 +205,19 @@
             <h2 class="text-lg font-bold mb-2">Shaykh Sulaiman</h2>
             <p class="text-sm text-muted-foreground">Shaykh Sulaiman is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
             <a href="./hitlist/sulaiman.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
-          </div>          
+          </div>
+          <div class="bg-card p-4 rounded-lg shadow-md profile-item">
+            <img 
+              src="https://pbs.twimg.com/profile_images/1877815600568827904/MiKPGnaZ_400x400.jpg"
+              alt="Arthur Kwon Lee"
+              class="w-full h-40 object-cover rounded-lg mb-4"
+            />
+            <h2 class="text-lg font-bold mb-2">Arthur Kwon Lee</h2>
+            <p class="text-sm text-muted-foreground">
+              Arthur Kwon Lee is known for engaging in hateful and divisive rhetoric, spreading controversial propaganda online.
+            </p>
+            <a href="./hitlist/arthurkwonlee.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+          </div>            
         </div>
       </div>
     </main>
