--- a/index.html
+++ b/index.html
@@ -217,7 +217,19 @@
               Arthur Kwon Lee is known for engaging in hateful and divisive rhetoric, spreading controversial propaganda online.
             </p>
             <a href="./hitlist/arthurkwonlee.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
-          </div>            
+          </div>
+          <div class="bg-card p-4 rounded-lg shadow-md profile-item">
+            <img 
+              src="https://pbs.twimg.com/profile_images/1875403499267383296/o12-818t_400x400.jpg"
+              alt="Stew Peters"
+              class="w-full h-40 object-cover rounded-lg mb-4"
+            />
+            <h2 class="text-lg font-bold mb-2">Stew Peters</h2>
+            <p class="text-sm text-muted-foreground">
+              Stew Peters is a known propagandist and conspiracy theorist who engages in inflammatory rhetoric online.
+            </p>
+            <a href="./hitlist/stewpeters.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+          </div>                
         </div>
       </div>
     </main>
