--- a/index.html
+++ b/index.html
@@ -229,7 +229,19 @@
               Stew Peters is a known propagandist and conspiracy theorist who engages in inflammatory rhetoric online.
             </p>
             <a href="./hitlist/stewpeters.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
-          </div>                
+          </div>
+          <div class="bg-card p-4 rounded-lg shadow-md profile-item">
+            <img 
+              src="https://pbs.twimg.com/profile_images/1348139718249123840/9278FFrr_400x400.jpg"
+              alt="Jayant Bhandari"
+              class="w-full h-40 object-cover rounded-lg mb-4"
+            />
+            <h2 class="text-lg font-bold mb-2">Jayant Bhandari</h2>
+            <p class="text-sm text-muted-foreground">
+              Jayant Bhandari is a commentator who often shares controversial views and engages in provocative discussions on various platforms.
+            </p>
+            <a href="./hitlist/jayantbhandari.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+          </div>                   
         </div>
       </div>
     </main>
