--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             />
             <h2 class="text-lg font-bold mb-2">Daniel Haqiqatjou</h2>
             <p class="text-sm text-muted-foreground">Daniel Haqiqatjou is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
-            <a href="./hitlist/daniel.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+            <a href="./hitlist/daniel " class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
           </div>
           <div class="bg-card p-4 rounded-lg shadow-md profile-item">
             <img
@@ -175,7 +175,7 @@
             />
             <h2 class="text-lg font-bold mb-2">Waqar H Bhatti</h2>
             <p class="text-sm text-muted-foreground">Waqar H Bhatti is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
-            <a href="./hitlist/waqarhbhatti.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+            <a href="./hitlist/waqarhbhatti " class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
           </div>
           <div class="bg-card p-4 rounded-lg shadow-md profile-item">
             <img 
@@ -185,7 +185,7 @@
               />
             <h2 class="text-lg font-bold mb-2">Mohammed Hijab</h2>
             <p class="text-sm text-muted-foreground">Waqar H Bhatti is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
-            <a href="./hitlist/mohammedhijab.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+            <a href="./hitlist/mohammedhijab " class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
           </div>
           <div class="bg-card p-4 rounded-lg shadow-md profile-item">
             <img 
@@ -195,7 +195,7 @@
             />
             <h2 class="text-lg font-bold mb-2">Bushra Shaikh</h2>
             <p class="text-sm text-muted-foreground">Budhra Shaikh is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
-            <a href="./hitlist/bushra.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+            <a href="./hitlist/bushra " class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
           </div>
           <div class="bg-card p-4 rounded-lg shadow-md profile-item">
             <img 
@@ -205,7 +205,7 @@
             />
             <h2 class="text-lg font-bold mb-2">Shaykh Sulaiman</h2>
             <p class="text-sm text-muted-foreground">Shaykh Sulaiman is an anti-Hindu, hatemonger who usually posts provocative stuff on X.</p>
-            <a href="./hitlist/sulaiman.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+            <a href="./hitlist/sulaiman " class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
           </div>
           <div class="bg-card p-4 rounded-lg shadow-md profile-item">
             <img 
@@ -217,7 +217,7 @@
             <p class="text-sm text-muted-foreground">
               Arthur Kwon Lee is known for engaging in hateful and divisive rhetoric, spreading controversial propaganda online.
             </p>
-            <a href="./hitlist/arthurkwonlee.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+            <a href="./hitlist/arthurkwonlee " class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
           </div>
           <div class="bg-card p-4 rounded-lg shadow-md profile-item">
             <img 
@@ -229,7 +229,7 @@
             <p class="text-sm text-muted-foreground">
               Stew Peters is a known propagandist and conspiracy theorist who engages in inflammatory rhetoric online.
             </p>
-            <a href="./hitlist/stewpeters.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+            <a href="./hitlist/stewpeters " class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
           </div>
           <div class="bg-card p-4 rounded-lg shadow-md profile-item">
             <img 
@@ -241,7 +241,7 @@
             <p class="text-sm text-muted-foreground">
               Jayant Bhandari is a commentator who often shares controversial views and engages in provocative discussions on various platforms.
             </p>
-            <a href="./hitlist/jayantbhandari.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+            <a href="./hitlist/jayantbhandari " class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
           </div>                   
         </div>
       </div>
@@ -253,6 +253,7 @@
           <li><a href="mailto:gbhremilio@proton.me" class="hover:text-primary-foreground/80">Email</a></li>
           <li><a href="./menu/contactus " class="hover:text-primary-foreground/80">Contact Us</a></li>
           <li><a href="./menu/faq " class="hover:text-primary-foreground/80">FAQs</a></li>
+          <li><a href="./tos" class="hover:text-primary-foreground/80">ToS</a></li>
         </ul>
       </div>
     </footer>
