--- a/index.html
+++ b/index.html
@@ -242,7 +242,19 @@
               Jayant Bhandari is a commentator who often shares controversial views and engages in provocative discussions on various platforms.
             </p>
             <a href="./hitlist/jayantbhandari " class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
-          </div>                   
+          </div>
+          <div class="bg-card p-4 rounded-lg shadow-md profile-item">
+            <img 
+              src="https://pbs.twimg.com/media/GU3DLRJbYAA8ODf?format=jpg&name=medium"
+              alt="Lydon Perry"
+              class="w-full h-40 object-cover rounded-lg mb-4"
+            />
+            <h2 class="text-lg font-bold mb-2">Lydon Perry (I,Hypocrite | lporiginalg)</h2>
+            <p class="text-sm text-muted-foreground">
+              Lydon Perry, also known by his handle "I,Hypocrite," is a controversial figure known for his divisive commentary and public persona.
+            </p>
+            <a href="./hitlist/lydonperry.html" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+          </div>          
         </div>
       </div>
     </main>
