--- a/index.html
+++ b/index.html
@@ -149,6 +149,16 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6" id="profileGrid">
           <div class="bg-card p-4 rounded-lg shadow-md profile-item">
             <img
+            src=""
+            alt="Not Avaliable"
+            class="w-full h-10 object-cover rounded-lg mb-4"
+            />
+            <h2 class="text-lg font-bold mb-2">NSFW Content of Hindu Girl WhatsApp Group</h2>
+            <p class="text-sm text-muted-foreground">This group is involved in blackmailing and doxxing Hindu Girls.</p>
+            <a href="./hitlist/group" class="block mt-2 text-accent hover:text-accent-foreground">View Profile</a>
+          </div>
+          <div class="bg-card p-4 rounded-lg shadow-md profile-item">
+            <img
               src="https://pbs.twimg.com/profile_images/1861543447343095808/gjXejybw_400x400.jpg"
               alt="Lord Miles"
               class="w-full h-40 object-cover rounded-lg mb-4"
