--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6" id="profileGrid">
           <div class="bg-card p-4 rounded-lg shadow-md profile-item">
             <img
-            src=""
+            src="https://i.imgur.com/hxwROSH.jpeg"
             alt="Not Avaliable"
             class="w-full h-10 object-cover rounded-lg mb-4"
             />
