--- a/hitlist/group.html
+++ b/hitlist/group.html
@@ -138,7 +138,7 @@
         <div class="content">
             <div class="grid">
                 <div>
-                    <img src="" alt="N/A" class="avatar">
+                    <img src="https://i.imgur.com/hxwROSH.jpeg" alt="N/A" class="avatar">
                 </div>
                 <div>
                     <section class="section">
