--- a/hitlist/group.html
+++ b/hitlist/group.html
@@ -26,8 +26,15 @@
         }
         .header-content {
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            flex-direction: column;
+            gap: 15px;
+        }
+        @media (min-width: 640px) {
+            .header-content {
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+            }
         }
         .title {
             font-size: 24px;
@@ -46,7 +53,7 @@
             border-radius: 4px;
             cursor: pointer;
             font-size: 14px;
-            margin-left: 10px;
+            margin: 5px;
         }
         .button:hover {
             background-color: #dbeafe;
@@ -56,11 +63,18 @@
         }
         .grid {
             display: grid;
-            grid-template-columns: 1fr 2fr;
+            grid-template-columns: 1fr;
             gap: 20px;
+        }
+        @media (min-width: 768px) {
+            .grid {
+                grid-template-columns: 1fr 2fr;
+            }
         }
         .avatar {
             width: 100%;
+            max-width: 300px;
+            margin: 0 auto;
             aspect-ratio: 1;
             border-radius: 8px;
             object-fit: cover;
@@ -73,47 +87,41 @@
             font-weight: bold;
             margin-bottom: 10px;
         }
-        table {
-            width: 100%;
-            border-collapse: collapse;
+        .admin-card {
+            background-color: #f8fafc;
+            border-radius: 8px;
+            padding: 15px;
+            margin-bottom: 15px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
         }
-        th, td {
-            text-align: left;
-            padding: 8px;
-            border-bottom: 1px solid #e5e7eb;
-        }
-        th {
-            font-weight: bold;
-        }
-        .badge {
-            display: inline-block;
-            padding: 4px 8px;
-            border-radius: 9999px;
-            font-size: 12px;
-            font-weight: bold;
-        }
-        .badge-blue {
-            background-color: #dbeafe;
+        .admin-card h3 {
+            margin: 0 0 10px 0;
             color: #1e40af;
         }
-        .badge-red {
-            background-color: #fee2e2;
-            color: #b91c1c;
+        .admin-info {
+            display: grid;
+            gap: 8px;
         }
-        .badge-gray {
-            background-color: #f3f4f6;
-            color: #374151;
+        .admin-info p {
+            margin: 0;
+            word-break: break-word;
+        }
+        .info-label {
+            font-weight: bold;
+            color: #4b5563;
         }
         .footer {
             background-color: #f9fafb;
             padding: 20px;
             display: flex;
-            justify-content: space-between;
+            flex-wrap: wrap;
+            gap: 10px;
+            justify-content: center;
         }
-        .separator {
-            border: none;
-            border-top: 1px solid #e5e7eb;
-            margin: 20px 0;
+        @media (min-width: 640px) {
+            .footer {
+                justify-content: space-between;
+            }
         }
     </style>
 </head>
@@ -143,81 +151,65 @@
                 <div>
                     <section class="section">
                         <h2 class="section-title">Personal Information</h2>
-                        <table>
-                            <tr>
-                                <th>Full Name</th>
-                                <td><a href="#detailed">Multiple Admins (Click Here)</a></td>
-                            </tr>
-                            <tr>
-                                <th>Image Proof</th>
-                                <td><a href="https://i.imgur.com/hxwROSH.jpeg"><strong><b>Click Here</b></strong></a></td>
-                            </tr>
-                            <tr>
-                                <th>Address</th>
-                                <td><a href="#detailed">Multiple Address (Click Here)</a></td>
-                            </tr>
-                            <tr>
-                                <th>Email</th>
-                                <td><a href="#detailed">Multiple Emails (Click Here)</a></td>
-                            </tr>
-                            <tr>
-                                <th>Phone Number</th>
-                                <td><a href="#detailed">Multiple Number (Click Here)</a></td>
-                            </tr>
-                            <tr>
-                                <th>Occupation</th>
-                                <td>Anti-Hindu Propagandist</td>
-                            </tr>
                         <div id="detailed">
-                            <tr>
-                                <th>Admin 1</th>
-                                <td>Name: Ali Khan</td>
-                                <td>Email: hi9031335@gmail.com</td>
-                                <td>Phone Number: +91 9310779616</td>
-                                <td>Address: Delhi</td>
-                            </tr>
-                            <tr>
-                                <th>Admin 2 </th>
-                                <td>Name: Atikul Islam, also known as Abdul Hok</td>
-                                <td>Email: atikulislam144new@gmail.com</td>
-                                <td>Phone Number: +91 9101740461</td>
-                                <td>Address: Assam</td>
-                            </tr>
-                            <tr>
-                                <th>Admin 3</th>
-                                <td>Name: B Pawar or Pawar Bhagwan</td>
-                                <td>Email: pawarbhagwan750@gmail.com</td>
-                                <td>Phone Number: +91 9405409425</td>
-                                <td>Address: Maharashtra</td>
-                            </tr>
-                            <tr>
-                                <th>Admin 4</th>
-                                <td>Name: Venky Chandu</td>
-                                <td>Email: venkychandu00@gmail.com</td>
-                                <td>Phone Number: +91 8082940401</td>
-                                <td>Address:  Jammu & Kashmir</td>
-                            </tr>
-                            <tr>
-                                <th>Admin 5</th>
-                                <td>Name: Rohit Gupta or Nisha (Lucknow Couple)</td>
-                                <td>Email: N/A</td>
-                                <td>Phone Number: +91 7398622742</td>
-                                <td>Address: Lucknow, UP</td>
-                            </tr>
-                            <tr>
-                                <th>Admin 6</th>
-                                <td>Name: Amit</td>
-                                <td>Email: N/A</td>
-                                <td>Phone Number: Amit Delhi</td>
-                                <td>Address: Punjab</td>
-                            </tr>
+                            <div class="admin-card">
+                                <h3>Admin 1</h3>
+                                <div class="admin-info">
+                                    <p><span class="info-label">Name:</span> Ali Khan</p>
+                                    <p><span class="info-label">Email:</span> hi9031335@gmail.com</p>
+                                    <p><span class="info-label">Phone:</span> +91 9310779616</p>
+                                    <p><span class="info-label">Address:</span> Delhi</p>
+                                </div>
+                            </div>
+                            <div class="admin-card">
+                                <h3>Admin 2</h3>
+                                <div class="admin-info">
+                                    <p><span class="info-label">Name:</span> Atikul Islam, also known as Abdul Hok</p>
+                                    <p><span class="info-label">Email:</span> atikulislam144new@gmail.com</p>
+                                    <p><span class="info-label">Phone:</span> +91 9101740461</p>
+                                    <p><span class="info-label">Address:</span> Assam</p>
+                                </div>
+                            </div>
+                            <div class="admin-card">
+                                <h3>Admin 3</h3>
+                                <div class="admin-info">
+                                    <p><span class="info-label">Name:</span> B Pawar or Pawar Bhagwan</p>
+                                    <p><span class="info-label">Email:</span> pawarbhagwan750@gmail.com</p>
+                                    <p><span class="info-label">Phone:</span> +91 9405409425</p>
+                                    <p><span class="info-label">Address:</span> Maharashtra</p>
+                                </div>
+                            </div>
+                            <div class="admin-card">
+                                <h3>Admin 4</h3>
+                                <div class="admin-info">
+                                    <p><span class="info-label">Name:</span> Venky Chandu</p>
+                                    <p><span class="info-label">Email:</span> venkychandu00@gmail.com</p>
+                                    <p><span class="info-label">Phone:</span> +91 8082940401</p>
+                                    <p><span class="info-label">Address:</span> Jammu & Kashmir</p>
+                                </div>
+                            </div>
+                            <div class="admin-card">
+                                <h3>Admin 5</h3>
+                                <div class="admin-info">
+                                    <p><span class="info-label">Name:</span> Rohit Gupta or Nisha (Lucknow Couple)</p>
+                                    <p><span class="info-label">Email:</span> N/A</p>
+                                    <p><span class="info-label">Phone:</span> +91 7398622742</p>
+                                    <p><span class="info-label">Address:</span> Lucknow, UP</p>
+                                </div>
+                            </div>
+                            <div class="admin-card">
+                                <h3>Admin 6</h3>
+                                <div class="admin-info">
+                                    <p><span class="info-label">Name:</span> Amit</p>
+                                    <p><span class="info-label">Email:</span> N/A</p>
+                                    <p><span class="info-label">Phone:</span> Amit Delhi</p>
+                                    <p><span class="info-label">Address:</span> Punjab</p>
+                                </div>
+                            </div>
                         </div>
-                        </table>
                     </section>
-                    <hr class="separator">
                 </div>
             </div>
-            <hr class="separator">
             <section class="section">
                 <h2 class="section-title">Reason/Brief</h2>
                 <p>This group bully and harras Hindu girls, they doxx them gather their number. Maybe they are preparing some hitlist, they could be rape scandal. Many supporters filed FIR and many friends helped me a lot. I am not mentioning name of my supporters because it could risk them. Reach me out for credit if you are comfortable.</p>
